fix(custom select): line 1 is invisible when no data in line 2

--- a/src/assets/sass_re/_common.scss
+++ b/src/assets/sass_re/_common.scss
@@ -197,6 +197,10 @@ mat-selection-list.items-list {
   overflow: auto;
 }
 
+mat-option .mat-option-text {
+  min-height: 20px;
+}
+
 .custom-ac-label1 {
   line-height: 20px;
 }
@@ -206,5 +210,3 @@ mat-selection-list.items-list {
   // line-height: 20px;
   margin-top: -17px;
 }
-
-
